# cli-cache

./: .gitignore  README.md  pyproject.toml
doc/: design_doc.md
src/cli_cache/: __main__.py  cache.py  cli.py  crypto.py  runner.py  session.py
tests/: test_cache.py  test_cli.py  test_crypto.py  test_session.py
